// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClientConnector component (integration with AsyncAPI document) renders with default path when pathName is null 1`] = `
"@Startup
@Singleton  
public class WebSocketClientConnector{

  @Inject
  WebSocketConnector<WebSocketClient> connector;


  @Inject
  @ConfigProperty(name = \\"com.asyncapi.WebSocketClient.base-uri\\")
  String baseURI;


  @PostConstruct
  void openAndSendMessagesWithDelay() {
      new Thread(() -> {
          try {
            Log.info(\\"Starting WebSocket connection attempt...\\");
            // URI parameters
            String query = \\"\\";
            
            String heartbeat = System.getenv(\\"HEARTBEAT\\");
            if(heartbeat == null || heartbeat.isEmpty()){
              throw new IllegalArgumentException(\\"Required environment variable HEARTBEAT is missing or empty\\");
            }
            query += \\"heartbeat=\\" + URLEncoder.encode(heartbeat, StandardCharsets.UTF_8);

            String bids = System.getenv(\\"BIDS\\");
            if(bids == null || bids.isEmpty()){
              throw new IllegalArgumentException(\\"Required environment variable BIDS is missing or empty\\");
            }
            query += \\"&bids=\\" + URLEncoder.encode(bids, StandardCharsets.UTF_8);

            String sessionId = System.getenv(\\"SESSIONID\\");
            if(sessionId == null || sessionId.isEmpty()){
              throw new IllegalArgumentException(\\"Required environment variable SESSIONID is missing or empty\\");
            }
            query += \\"&sessionId=\\" + URLEncoder.encode(sessionId, StandardCharsets.UTF_8);


            String queryUri = baseURI + \\"/\\" + \\"?\\" + query;
            WebSocketClientConnection connection = connector.baseUri(queryUri).connectAndAwait();
            Thread.sleep(120000); // Keep the connection open for 2 minutes
            

            // Calling to close the WebSocket connection
  

            connection.closeAndAwait();
            Log.info(\\"Connection closed gracefully.\\");
            Thread.sleep(1000); // Wait for a second before exiting
            System.exit(0);
        } catch (Exception e) {
              Log.error(\\"Error during WebSocket communication\\", e);
              System.exit(1);
        }
    }).start();
  }
}"
`;

exports[`ClientConnector component (integration with AsyncAPI document) renders with default path when pathName is undefined 1`] = `
"@Startup
@Singleton  
public class WebSocketClientConnector{

  @Inject
  WebSocketConnector<WebSocketClient> connector;


  @Inject
  @ConfigProperty(name = \\"com.asyncapi.WebSocketClient.base-uri\\")
  String baseURI;


  @PostConstruct
  void openAndSendMessagesWithDelay() {
      new Thread(() -> {
          try {
            Log.info(\\"Starting WebSocket connection attempt...\\");
            // URI parameters
            String query = \\"\\";
            
            String heartbeat = System.getenv(\\"HEARTBEAT\\");
            if(heartbeat == null || heartbeat.isEmpty()){
              throw new IllegalArgumentException(\\"Required environment variable HEARTBEAT is missing or empty\\");
            }
            query += \\"heartbeat=\\" + URLEncoder.encode(heartbeat, StandardCharsets.UTF_8);

            String bids = System.getenv(\\"BIDS\\");
            if(bids == null || bids.isEmpty()){
              throw new IllegalArgumentException(\\"Required environment variable BIDS is missing or empty\\");
            }
            query += \\"&bids=\\" + URLEncoder.encode(bids, StandardCharsets.UTF_8);

            String sessionId = System.getenv(\\"SESSIONID\\");
            if(sessionId == null || sessionId.isEmpty()){
              throw new IllegalArgumentException(\\"Required environment variable SESSIONID is missing or empty\\");
            }
            query += \\"&sessionId=\\" + URLEncoder.encode(sessionId, StandardCharsets.UTF_8);


            String queryUri = baseURI + \\"/\\" + \\"?\\" + query;
            WebSocketClientConnection connection = connector.baseUri(queryUri).connectAndAwait();
            Thread.sleep(120000); // Keep the connection open for 2 minutes
            

            // Calling to close the WebSocket connection
  

            connection.closeAndAwait();
            Log.info(\\"Connection closed gracefully.\\");
            Thread.sleep(1000); // Wait for a second before exiting
            System.exit(0);
        } catch (Exception e) {
              Log.error(\\"Error during WebSocket communication\\", e);
              System.exit(1);
        }
    }).start();
  }
}"
`;

exports[`ClientConnector component (integration with AsyncAPI document) renders with path from fixture 1`] = `
"@Startup
@Singleton  
public class WebSocketClientConnector{

  @Inject
  WebSocketConnector<WebSocketClient> connector;


  @Inject
  @ConfigProperty(name = \\"com.asyncapi.WebSocketClient.base-uri\\")
  String baseURI;


  @PostConstruct
  void openAndSendMessagesWithDelay() {
      new Thread(() -> {
          try {
            Log.info(\\"Starting WebSocket connection attempt...\\");
            // URI parameters
            String query = \\"\\";
            
            String heartbeat = System.getenv(\\"HEARTBEAT\\");
            if(heartbeat == null || heartbeat.isEmpty()){
              throw new IllegalArgumentException(\\"Required environment variable HEARTBEAT is missing or empty\\");
            }
            query += \\"heartbeat=\\" + URLEncoder.encode(heartbeat, StandardCharsets.UTF_8);

            String bids = System.getenv(\\"BIDS\\");
            if(bids == null || bids.isEmpty()){
              throw new IllegalArgumentException(\\"Required environment variable BIDS is missing or empty\\");
            }
            query += \\"&bids=\\" + URLEncoder.encode(bids, StandardCharsets.UTF_8);

            String sessionId = System.getenv(\\"SESSIONID\\");
            if(sessionId == null || sessionId.isEmpty()){
              throw new IllegalArgumentException(\\"Required environment variable SESSIONID is missing or empty\\");
            }
            query += \\"&sessionId=\\" + URLEncoder.encode(sessionId, StandardCharsets.UTF_8);


            String queryUri = baseURI + \\"/ws\\" + \\"?\\" + query;
            WebSocketClientConnection connection = connector.baseUri(queryUri).connectAndAwait();
            Thread.sleep(120000); // Keep the connection open for 2 minutes
            

            // Calling to close the WebSocket connection
  

            connection.closeAndAwait();
            Log.info(\\"Connection closed gracefully.\\");
            Thread.sleep(1000); // Wait for a second before exiting
            System.exit(0);
        } catch (Exception e) {
              Log.error(\\"Error during WebSocket communication\\", e);
              System.exit(1);
        }
    }).start();
  }
}"
`;
